# symdiff

./: .gitignore  .travis.yml  CHANGES.md  CITATION.md  CMakeLists.txt  INSTALL  NOTICE  README  README.md  appveyor.cmake  appveyor.yml  test_newapi.py  win32.cmake
bdist_wheel/: setup.cfg  setup.py
cmake/: appveyor.cmake
examples/: arrhenius.py  deftest.py  modellist1.py  models1.py  ordered.py  parsetest.py  remove1.py  subexpression1.py  table.py  undefined1.py  utf8.py
goldenresults/unix/: arrhenius_py2.out  deftest_py2.out  maple.cc  maple.out  models1_py2.out  ns_3d.out  parsetest_py2.out  parsetest_tcl.out  subexpression1_py2.out  symdiff1.out  symdiff2.out  symdiff3.out  table.out  table_py.out  table_py3.out  undefined1_py2.out  units.out  utf8_py2.out
lib/symdiff/: __init__.py  newapi.py
scripts/: build_appveyor.bat  build_docker_manylinux2014.sh  build_docker_manylinux_2_28.sh  build_macos.sh  build_manylinux2014.sh  mkindex.tcl  setup_appveyor.sh  setup_centos_5.sh  setup_centos_6.sh  setup_fedora_27.sh  setup_linux.sh  setup_osx_10.10.sh  setup_osx_10.6.8.sh  setup_osx_10.9.sh  setup_osx_anaconda.sh  setup_osx_gcc.sh  setup_redhat_6.4.sh  setup_redhat_6.5.sh  setup_ubuntu_10.04.sh  setup_ubuntu_12.04.sh  setup_ubuntu_12.04_gcc-4.7.sh  setup_ubuntu_12.04_icc_2013.sh  setup_ubuntu_14.04.sh  setup_ubuntu_16.04.sh  setup_ubuntu_18.sh  setup_windows.sh
sphinx/: Makefile  NOTICE  make.bat
sphinx/source/: additional.rst  advanced.rst  conf.py  devsim.bib  frontmatter.rst  index.rst  installation.rst  introduction.rst  macros.txt  references.rst  releasenotes.rst  syntax.rst
src/: CMakeLists.txt
src/engine/: Add.cc  Add.hh  CMakeLists.txt  Constant.cc  Constant.hh  Context.cc  Context.hh  EngineAPI.cc  EngineAPI.hh  EquationFunc.cc  EquationFunc.hh  EquationFunctions.cc  EquationFunctions.hh  EquationObject.cc  EquationObject.hh  Exponent.cc  Exponent.hh  Functions.cc  Functions.hh  IfElse.cc  IfElse.hh  Log.cc  Log.hh  LogicalFunc.cc  LogicalFunc.hh  Pow.cc  Pow.hh  ProcessModelOrder.cc  ProcessModelOrder.hh  ProcessOrderedTable.cc  ProcessOrderedTable.hh  Product.cc  Product.hh  SubExpr.cc  SubExpr.hh  SymdiffImport.hh  UserFunc.cc  UserFunc.hh  Utility.cc  Utility.hh  (+16 more)
src/pycomp/: CMakeLists.txt  PythonSymdiffCommands.cc  SYMDIFFapi.cc  SYMDIFFapi.hh
src/tclcomp/: CMakeLists.txt  TclCommands.cc  TclCommands.hh  TclSymdiffCommands.cc  TclSymdiffCommands.hh  tclcomp.cc
testing/: CMakeLists.txt  arrhenius_tcl.tcl  parsetest_tcl.tcl  rundifftest.pl  rundifftest.py  symdiff1.tcl  symdiff2.tcl  symdiff3.tcl  symdiff4.tcl  table.tcl  units.tcl
