[bdist_wheel]
py-limited-api = cp36
[metadata]
version = 1.2.1
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
name = symdiff
url = https://symdiff.org
author = Juan Sanchez
author_email = info@devsim.com
description = SYMDIFF: Symbolic differentation of algebraic expressions
license = Apache License, Version 2.0
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/devsim/symdiff/issues
    Source Code = https://github.com/devsim/symdiff
    Online Forum = https://forum.devsim.org
