
INCLUDE_DIRECTORIES (
  ../engine
  ${PYTHON_INCLUDE}
)

SET (PYTHON_SRCS
  PythonSymdiffCommands.cc
)

ADD_LIBRARY (symdiff_py SHARED ${PYTHON_SRCS})
TARGET_LINK_LIBRARIES (symdiff_py symdiff ${PYTHON_ARCHIVE})
IF(WIN32)
SET_TARGET_PROPERTIES(symdiff_py PROPERTIES SUFFIX ".pyd" OUTPUT_NAME "symdiff")
ELSE(WIN32)
SET_TARGET_PROPERTIES(symdiff_py PROPERTIES PREFIX "" SUFFIX ".so" OUTPUT_NAME "symdiff")
ENDIF(WIN32)

GET_TARGET_PROPERTY(SYMDIFF_PY_NAME symdiff_py LOCATION)
ADD_CUSTOM_COMMAND(TARGET symdiff_py
          POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_LIBRARY_DIR}
          COMMAND ${CMAKE_COMMAND} -E copy ${SYMDIFF_PY_NAME} ${PROJECT_LIBRARY_DIR}/.
)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
SET_TARGET_PROPERTIES(symdiff_py PROPERTIES INSTALL_RPATH "\$ORIGIN/")
ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
IF (APPLE)
#SET_TARGET_PROPERTIES(symdiff_py PROPERTIES INSTALL_RPATH "@loader_path/")
SET_TARGET_PROPERTIES(symdiff_py PROPERTIES LINK_FLAGS " -flat_namespace")
ENDIF (APPLE)


